--- a/style/sass.css
+++ b/style/sass.css
@@ -4502,13 +4502,13 @@ body {
   }
 }
 .body__index {
-  width: 100vw;
   overflow-x: hidden;
 }
 .body__index main {
   /* #####################   SECTION UNO ############################# */
-  /* #####################   SECTION DOS ############################# */
   /* #####################   SECTION TRES ############################# */
+  /* #####################   SECTION CUATRO ############################# */
+  /* #####################   SECTION CINCO ############################# */
 }
 .body__index main .boton_portafolio {
   position: absolute;
@@ -4674,36 +4674,40 @@ body {
 }
 .body__index main .fondo_inicio .bold_uno {
   position: absolute;
-  top: -500px;
-  left: -400px;
+  top: -400px;
+  left: -300px;
+  animation: 5s infinite linear gradienanimate;
 }
 .body__index main .fondo_inicio .bold_dos {
   position: absolute;
   top: 10px;
-  left: -400px;
+  left: -200px;
+  animation: 5s infinite linear gradienanimate;
 }
 .body__index main .fondo_inicio .bold_tres {
   position: absolute;
   bottom: -600px;
   right: -400px;
+  animation: 5s infinite linear gradienanimate;
 }
 .body__index main .fondo_inicio .fondo_blur {
   z-index: 0;
   width: 100vw;
   height: 100%;
-  background: rgba(255, 255, 255, 0.02);
-  -webkit-backdrop-filter: blur(80px);
-          backdrop-filter: blur(80px);
+  background: repeating-radial-gradient(rgba(255, 255, 255, 0.02) 0 0.0001%, rgba(255, 255, 255, 0.2745098039) 0 0.0002%) 60% 60%/3000px 3000px, repeating-conic-gradient(rgba(255, 255, 255, 0.02) 0 0.0001%, rgba(255, 255, 255, 0.2745098039) 0 0.0002%) 40% 40%/3000px 3000px;
+  background-blend-mode: difference;
+  -webkit-backdrop-filter: blur(30px);
+          backdrop-filter: blur(30px);
 }
 .body__index main .cont_cinta_inicio {
   margin-top: 3em;
   position: relative;
+  width: 100%;
 }
 .body__index main .cont_cinta_inicio .slider_inicio {
   position: absolute;
   z-index: 0;
   top: 0;
-  left: -1px;
   height: 150px;
   margin: 0px;
   width: 100%;
@@ -4713,6 +4717,7 @@ body {
   flex-shrink: 0;
   box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.322);
   overflow: hidden;
+  background: #ffffff;
 }
 .body__index main .cont_cinta_inicio .slider_inicio .slide-track {
   animation: 60s linear infinite;
@@ -4720,7 +4725,6 @@ body {
   display: flex;
   width: 11100px;
   gap: 20px;
-  background: #ffffff;
   align-items: center;
 }
 .body__index main .cont_cinta_inicio .slider_inicio .slide-track .slide {
@@ -4884,6 +4888,7 @@ body {
   display: flex;
   flex-direction: column;
   margin: 10em 5em 5em 5em;
+  gap: 5em;
 }
 .body__index main .mis_servicios .cont_titulo_mis_servicios {
   display: inline-flex;
@@ -4937,6 +4942,198 @@ body {
   text-transform: capitalize;
   white-space: nowrap;
 }
+.body__index main .mis_servicios .cont_lista_mis_servicios {
+  display: flex;
+  flex-direction: column;
+}
+.body__index main .mis_servicios .cont_lista_mis_servicios .cont_item_mis_servicios {
+  display: flex;
+  padding: 15px 0px;
+  justify-content: space-between;
+  align-items: flex-start;
+  align-self: stretch;
+  border-bottom: 0.5px solid #b1b1b1;
+}
+.body__index main .mis_servicios .cont_lista_mis_servicios .cont_item_mis_servicios h4 {
+  color: #818181;
+  font-family: Sora;
+  font-size: 50px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 136%;
+  /* 68px */
+  text-transform: uppercase;
+}
+.body__index main .mis_servicios .cont_lista_mis_servicios .cont_item_mis_servicios p {
+  color: #000;
+  font-family: Sora;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 107.5%;
+  /* 15.05px */
+}
+.body__index main .mis_servicios .cont_lista_mis_servicios .cont_item_mis_servicios:hover {
+  border-bottom: 1px solid #000000;
+}
+.body__index main .mis_servicios .cont_lista_mis_servicios .cont_item_mis_servicios:hover h4 {
+  color: #252525;
+  font-weight: 900;
+}
+.body__index main .mis_servicios .cont_lista_mis_servicios .cont_item_mis_servicios:hover p {
+  font-weight: 500;
+}
+.body__index main .cont_section_plus {
+  display: flex;
+  height: 100%;
+  margin: 5em 5em 5em 5em;
+  padding-bottom: 3em;
+  padding-top: 5em;
+  position: relative;
+  overflow: hidden;
+  flex-direction: column;
+}
+.body__index main .cont_section_plus .cont_titulo_plus {
+  padding: 2em 2em 2em 2em;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-end;
+  width: 100%;
+}
+.body__index main .cont_section_plus .cont_titulo_plus .subtitulo_plus {
+  color: #000;
+  font-family: Sorts Mill Goudy;
+  font-size: 90px;
+  font-style: italic;
+  font-weight: 400;
+  line-height: 81.5%;
+  /* 73.35px */
+  letter-spacing: 4.5px;
+  text-transform: capitalize;
+}
+.body__index main .cont_section_plus .cont_titulo_plus .subtitulo_plus strong {
+  color: #000;
+  font-family: Sora;
+  font-size: 90px;
+  font-style: normal;
+  font-weight: 800;
+  line-height: 81.5%;
+  letter-spacing: 4.5px;
+  text-transform: capitalize;
+}
+.body__index main .cont_section_plus .cont_titulo_plus .context_subtitulo {
+  color: #000;
+  font-family: Sora;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 250;
+  line-height: 138.5%;
+  /* 20.775px */
+  letter-spacing: 0.75px;
+  text-transform: capitalize;
+}
+.body__index main .cont_section_plus .slider_plus {
+  position: relative;
+  z-index: 0;
+  height: 40px;
+  margin: 0px;
+  width: 100%;
+  display: flex;
+  align-items: start;
+  transform: rotate(0deg);
+  flex-shrink: 0;
+  background: #ffffff;
+}
+.body__index main .cont_section_plus .slider_plus .slide-track {
+  animation: 70s linear infinite;
+  animation-name: scrollplus;
+  display: flex;
+  width: 2000px;
+  gap: 200px;
+}
+.body__index main .cont_section_plus .slider_plus .slide-track .slide {
+  height: 50px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: start;
+}
+.body__index main .cont_section_plus .slider_plus .slide-track .slide p {
+  padding-top: 0px;
+  padding-bottom: 10px;
+  color: #000;
+  text-align: center;
+  font-family: Sora;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 200;
+  line-height: 106%;
+  white-space: nowrap;
+}
+.body__index main .cont_section_plus .cont_lista_plus {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin: 2em 2em 2em 2em;
+}
+.body__index main .cont_section_plus .cont_lista_plus .cont_item_lista_plus {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 0.5px solid rgb(54, 54, 54);
+  padding-bottom: 5px;
+  gap: 20em;
+}
+.body__index main .cont_section_plus .cont_lista_plus .cont_item_lista_plus img {
+  margin: 10px;
+}
+.body__index main .cont_section_plus .cont_lista_plus .cont_item_lista_plus .parrafo_lista_plus {
+  color: #000;
+  text-align: justify;
+  font-family: Sora;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 136%;
+  text-transform: capitalize;
+}
+.body__index main .cont_section_plus .fondo_plus {
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  z-index: -10;
+  background: rgb(255, 255, 255);
+  overflow: hidden;
+}
+.body__index main .cont_section_plus .fondo_plus .bold_uno {
+  position: absolute;
+  top: -300px;
+  left: -200px;
+  animation: 10s infinite linear gradienanimate;
+}
+.body__index main .cont_section_plus .fondo_plus .bold_dos {
+  position: absolute;
+  top: 10px;
+  left: -400px;
+  animation: 10s infinite linear gradienanimate;
+}
+.body__index main .cont_section_plus .fondo_plus .bold_tres {
+  position: absolute;
+  bottom: -600px;
+  right: -400px;
+  animation: 10s infinite linear gradienanimate;
+}
+.body__index main .cont_section_plus .fondo_plus .fondo_blur {
+  width: 100vw;
+  height: 100%;
+  background: repeating-radial-gradient(rgba(255, 255, 255, 0.02) 0 0.0001%, rgba(255, 255, 255, 0.2470588235) 0 0.0005%) 60% 60%/3000px 3000px, repeating-conic-gradient(rgba(255, 255, 255, 0.02) 0 0.0001%, rgba(255, 255, 255, 0.2470588235) 0 0.0005%) 40% 40%/3000px 3000px;
+  background-blend-mode: difference;
+  animation: b 0.5s infinite alternate;
+  -webkit-backdrop-filter: blur(30px);
+          backdrop-filter: blur(30px);
+}
 
 @keyframes scroll10 {
   0% {
@@ -4944,6 +5141,27 @@ body {
   }
   100% {
     transform: translateX(-9000px);
+  }
+}
+@keyframes scrollplus {
+  0% {
+    transform: translateX(0px);
+  }
+  100% {
+    transform: translateX(-1900px);
+  }
+}
+@keyframes gradienanimate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+@keyframes b {
+  100% {
+    background-position: 10% 0, 30% 10%;
   }
 }
 .cont-cabezera_home {
